--- a/src/app/inicio/story/story.component.html
+++ b/src/app/inicio/story/story.component.html
@@ -1,2 +1,3 @@
+<app-window-loader [status]="!service.getStatusLoaderStore()"></app-window-loader>
 <app-capa></app-capa>
 <router-outlet></router-outlet>
