--- a/src/app/payment-steps/finish/finish.component.css
+++ b/src/app/payment-steps/finish/finish.component.css
@@ -43,3 +43,10 @@
     font-weight: 500;
     color: #795548;
 }
+
+.itefp {
+    margin: 10px;
+    width: 239px;
+    text-align: left;
+    height: 55px;
+}
