--- a/src/app/inicio/item-details/item-details.component.css
+++ b/src/app/inicio/item-details/item-details.component.css
@@ -27,12 +27,9 @@
     justify-content: space-between;
     margin-top: 2px;
     padding-bottom: 3px;
-    border-bottom: 1px solid #f9e7e7;
-    border: 1px solid #f9e7e7;
-    padding-top: 9px;
-    background: #f5f5f5;
-    /* color: white; */
-    border-radius: 12px;
+    padding-top: 0px;
+    margin-bottom: 28px;
+    padding-left: 0;
 }
 
 .catadc {
