--- a/src/app/payment-steps/finish/finish.component.html
+++ b/src/app/payment-steps/finish/finish.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12">
+<div class="col-sm-12" style="padding-bottom: 50px;">
     <div class="col-sm-12">
         <div class="col-sm-12" style="padding-top: 15px;">
             <h1 style="font-weight: 500;"> Finalize seu pedido </h1>
@@ -23,9 +23,9 @@
                                 </div>
                                 <div>
                                     <button mat-stroked-button color="primary">
-                                      <mat-icon>loop</mat-icon>
-                                      Trocar
-                                    </button>
+                    <mat-icon>loop</mat-icon>
+                    Trocar
+                  </button>
                                 </div>
                             </div>
 
@@ -53,12 +53,19 @@
                     </mat-tab-group>
                 </div>
 
-                <div class="col-sm-12" style="border-top: 1px solid rgb(249 231 231);; padding-top: 20px;margin-top: 5px;">
-                    <h1 style="font-weight: 500;">Metodo de pagamento</h1>
-                    <button class="" mat-raised-button color="primary">
-                      <mat-icon>add</mat-icon>
-                      Adicionar metodo de pagamento
-                    </button>
+                <div class="row">
+                    <div class="col-sm-12" style="border-top: 1px solid rgb(249 231 231);; padding-top: 20px;margin-top: 5px;">
+                        <h1 style="font-weight: 500;">Metodo de pagamento</h1>
+                        <div class="row">
+
+                            <div class="col-sm-5" style="text-align: center;" *ngFor="let item of service.getDadosEmpresa().formaspagamento">
+
+                                <button mat-stroked-button class="itefp" color="primary" (click)="addFp(item)">
+                                    <mat-icon class="mat-18">payments</mat-icon> {{ item.nome }}
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-sm-12" style="margin-top: 35px;padding-top: 35px; border-top: 1px solid rgb(249 231 231);">
