--- a/src/app/components/window-loader/window-loader.component.html
+++ b/src/app/components/window-loader/window-loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="status" style="     background-color: #ffc107;
+<div *ngIf="status" style="     background-color: #673ab7f2;
 height: 100vh;
 width: 100%;
 position: absolute;
