--- a/src/app/conta_usuario/data-user/data-user.component.html
+++ b/src/app/conta_usuario/data-user/data-user.component.html
@@ -1,58 +1,58 @@
-<div class="col-sm-12">
+<div class="col-sm-12" [formGroup]="form">
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Nome </mat-label>
-            <input matInput>
+            <input matInput formControlName="nome">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Telefone </mat-label>
-            <input matInput>
+            <input matInput formControlName="telefone">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Rua </mat-label>
-            <input matInput>
+            <input matInput formControlName="rua">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Número </mat-label>
-            <input matInput>
+            <input matInput formControlName="numero">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Bairro </mat-label>
-            <input matInput>
+            <input matInput formControlName="bairro">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Cidade </mat-label>
-            <input matInput>
+            <input matInput formControlName="cidade">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Complemento </mat-label>
-            <input matInput>
+            <input matInput formControlName="complemento">
         </mat-form-field>
     </div>
 
     <div class="col-sm-12">
         <mat-form-field>
             <mat-label> Ponto de referência </mat-label>
-            <input matInput>
+            <input matInput formControlName="ponto_referencia">
         </mat-form-field>
     </div>
 
