--- a/src/app/conta_usuario/adresses/adresses.component.html
+++ b/src/app/conta_usuario/adresses/adresses.component.html
@@ -1,10 +1,15 @@
+<div class="col-sm-12" style="margin-bottom: 30px;">
+    <button mat-raised-button color="primary"> <mat-icon>add</mat-icon> Adicionar endereço</button>
+</div>
+
+
 <div class="col-sm-12 item" *ngFor="let item of itens">
-    <div class="nn"> Nome do endereço: Minha casa </div>
-    <div class="bn"> Juazeiro-Coreia </div>
-    <div class="bn"> Rua Canadá, 89 </div>
-    <div class="bn">Referência: Casa</div>
-    <div class="bn">Complemento: Próximo a canteiro de obras</div>
+    <div class="nn"> Nome do endereço: {{ item.nome_endereco }} </div>
+    <div class="bn"> {{ item.cidade.nome }}-{{ item.bairro.nome }} </div>
+    <div class="bn"> {{ item.rua }}, {{ item.numero }} </div>
+    <div class="bn">Referência: {{ item.tiporesidencia }} </div>
+    <div class="bn">Complemento: {{ item.complemento }} </div>
     <div>
-        <button mat-raised-button> Remover </button>
+        <button mat-raised-button> <mat-icon>delete</mat-icon>  Remover </button>
     </div>
 </div>
