--- a/src/app/conta_usuario/avals/avals.component.html
+++ b/src/app/conta_usuario/avals/avals.component.html
@@ -1,3 +1,7 @@
+<div class="avi" *ngIf="itens.length === 0">
+    Você ainda fez nenhuma avaliação
+</div>
+
 <div class="col-sm-12 item" *ngFor="let item of itens">
 
     <div class="col-sm-12 pp">
