--- a/src/app/conta_usuario/cupons/cupons.component.css
+++ b/src/app/conta_usuario/cupons/cupons.component.css
@@ -40,3 +40,15 @@
     font-size: 36px;
     color: #00BCD4;
 }
+
+
+.av {
+  padding: 19px;
+  font-size: 16px;
+  background: #4caf50;
+  text-align: center;
+  border: 1px solid #4caf50;
+  color: #ffffff;
+  font-weight: 500;
+  border-radius: 7px;
+}
