--- a/src/app/conta_usuario/orders-user/orders-user.component.css
+++ b/src/app/conta_usuario/orders-user/orders-user.component.css
@@ -10,15 +10,33 @@
 }
 
 .status-order {
-    background-color: #e9e8ea;
-    color: black;
-    text-align: center;
+    text-align: left;
     padding: 3px;
-    border-radius: 4px;
+    border-radius: 0px;
+    color: grey;
 }
 
 .abt-order {
     text-align: center;
     padding-bottom: 25px;
     padding-top: 25px;
+}
+
+.avi {
+    padding: 20px;
+    background: #f7f7f7;
+    font-size: 16px;
+    border: 1px solid #e6dcdc;
+    color: #757575;
+    border-radius: 7px;
+    text-align: center;
+}
+
+.face001 {
+    width: 70px;
+    height: 70px;
+    background-size: 100%;
+    background-image: url('../../../assets/images/gifs/face01.gif');
+    margin: auto;
+    background-repeat: no-repeat;
 }
