--- a/src/app/inicio/itens-merchant/itens-merchant.component.css
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.css
@@ -56,12 +56,12 @@
 }
 
 .item-bg-img {
-    background-color: #e0e0e0;
+    background-color: #f7f6f6;
     border-radius: 5px;
     height: 150px;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
 }
 
 .ddata {
